--- a/css/style.css
+++ b/css/style.css
@@ -7423,7 +7423,7 @@ border-bottom: 0;
 .areas-of-work > div > div {
   margin: 40px 20px;
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-start;
     flex-direction: row;
     flex-wrap: wrap;
 }
